Introduce new ERouteOption enum and a new IDistanceProvider API to make distance lookups simpler and more robust.
BugzId: 1037